# demo_rgbd_slimmed

./: CMakeLists.txt  demo_rgbd_slimmed.launch  package.xml
src/: cameraParameters.h  featureTracking.cpp  featureTracking_ocl.cpp  pointDefinition.h  processDepthmap.cpp  realsenseTopics.cpp  realsenseTopicsSubscriber.cpp  testRealSense.cpp  visualOdometry.cpp
